# StarSimulation

./: CMakeLists.txt  README.md  build.sh  main.cpp
data/: CMakeLists.txt  dataset.cpp  dataset.h
data/Tycho-2/: unzip.sh
src/: CMakeLists.txt  common.h  design.md  draw.cpp  draw.h  observer.cpp  observer.h
tmp/: 星点数据
